# todd-bot

./: .gitignore  Cargo.toml  LICENSE  LICENSE.ap  LICENSE.mit  README.md
src/: calendar.rs  databaser.rs  errors.rs  helper.rs  initializer.rs  main.rs  member_info.rs  models.rs  old_calendar.rs  schema.rs  shitposts.rs  todd_commands.rs
