[package]
name = "todd-bot"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
framework = "0.2.4"
lazy_static = "1.4.0"
log = "0.4.20"
poise = "0.5.6"
tokio = { version = "1.32.0", features = ["full"]}
toml = "0.8.2"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
rand = "0.8.5"
chrono = "0.4.31"
